/* English */ +heraldic term, ref <bend#949779>

--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -1,16 +1,19 @@
 ==English==
+
 ===Pronunciation===
-*IPA: /'bεnd/
+*{{IPA|/'bend/}}
+
 ===Verb===
 [[Category:English irregular verbs]]
 {{en-verb2|'''to bend'''|'''[[bends]]'''|'''[[bent]]'''|'''[[bent]]'''|'''[[bending]]'''}}
-#''(transitive)'' To cause (something) to change its shape into a [[curve]], by [[physical]] [[force]], [[chemical]] action, or any other means.
-#''(transitive)''  (''nautical'') To [[join]] one [[rope]] to another, or to an object
+
+# {{transitive}} To cause (something) to change its shape into a [[curve]], by [[physical]] [[force]], [[chemical]] action, or any other means.
+# {{transitive}} {{nautical}} To [[join]] one [[rope]] to another, or to an object
 #: '''''Bend''' the sail to the yard.''
-#''(transitive)''  (''nautical'') To [[swing]] the [[body]] when [[rowing]]
-#''(transitive)''  (''music'') To smoothly change the pitch of a note.
+# {{transitive}} {{nautical}} To [[swing]] the [[body]] when [[rowing]]
+# {{transitive}} {{music}} To smoothly change the pitch of a note.
 #: ''You should '''bend''' the G sligthly sharp in the next measure.''
-#''(intransitive)'' To change one's shape into a [[curve]].
+# {{intransitive}}  To change one's shape into a [[curve]].
 #: ''To bow properly, '''bend''' at the waist.''
 
 ====Translations====
@@ -20,34 +23,39 @@
 *French: [[courber]]
 *German: [[beugen]] (1)
 *Hungarian: [[hajlít]] (1), [[görbít]] (1)
-*Ido: kurv-igar
+*[[Ido]]: [[kurv-igar]]
 *Indonesian: [[bengkok|membengkokkan]], [[belok|membelokkan]], [[tekuk|menekuk]] <!-- not checked -->
-{{mid}}
 *Italian: [[piegare]]
+{{mid}}
 *Japanese: [[曲げる]] ([[まげる]], mageru) <!-- not checked -->
 *Korean: [[구부리다]]
 *Romanian: [[indoi]]
 *Spanish: [[curvar]]
 {{bottom}}
 
-=== Noun ===
+===Noun===
 {{en-noun|bend|bends}}
 
 # A [[curve]].
 #: ''There's a sharp bend in the road ahead.''
-# (''nautical'') A [[knot]] used to join two [[rope]]s, or to tie a rope onto something.
-#*Note: In naval parlance, a knot involves splicing the strands of a rope.
+# {{nautical}} A [[knot]] used to join two [[rope]]s, or to tie a rope onto something.
+#* Note: In naval parlance, a knot involves splicing the strands of a rope.
 # (''plural, medicine, diving'') '''The bends''': A severe condition caused by excessively quick decompression, causing bubbles of [[nitrogen]] to form in the [[blood]]; [[decompression sickness]].
 #: ''A diver who stays deep for too long must ascend very slowly in order to prevent the bends.''
-====Pronunciation====
-*IPA: /'bεnd/
+# {{heraldry}} One of the [[honourable]] [[ordinary|ordinaries]] formed by two [[diagonal]] [[line]]s drawn from the [[dexter chief]] to the [[sinister base]]; it generally occupies a [[fifth]] part of the [[shield]] if [[uncharged]], but if [[charged]] [[one third]].
+
 
 ====Translations====
 *German: [[Kurve]] ''f'' (1)
 
-===Related Terms===
+===Related terms===
+*[[bend sinister]]
 *[[bent]]
 *[[sheet bend]]
+*[[string bend]]
+
+===References===
+{{R:Heraldry 1862}}
 
 [[fr:bend]]
 [[gl:bend]]
