--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -19,12 +19,14 @@
 *[[Breton]]: [[adarre]]
 *Bulgarian: [[отново]], [[пак]]
 *Czech: [[zase]]
+*Danish: [[igen]]
 *Dutch: [[opnieuw]], [[nogmaals]], [[weer]], [[wederom]]
 *[[Esperanto]]: [[denove]], [[ree]]
 *Finnish: [[taas]], [[uudelleen]], [[jälleen]], [[toistamiseen]], [[vielä kerran]]
 *French: [[denouveau]]
 *German: [[erneut]], [[noch einmal]], [[wieder]]
 *Hebrew: [[שוב]]
+*Icelandic: [[aftur]]
 *[[Ido]]: [[ankore un foyo]], [[ankorfoye]]
 *Indonesian: [[lagi]]
 *Italian: di [[nuovo]]
