/* Translations */ +French translations <seize#952809>

--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -27,6 +27,7 @@
 *Danish: [[gribe]]
 *Dutch: [[grijpen]], [[vangen]], [[pakken]] 
 *Finnish: [[tarttua]]
+*French: [[saisir]]
 {{mid}}
 *Latin: [[capere]]
 *Norwegian: [[gripe]]
@@ -40,6 +41,7 @@
 *Dutch: [[grijpen]], [[aangrijpen]]
 {{mid}}
 *Finnish: [[tarttua]] [[tilaisuus|tilaisuuteen]]
+*French: [[saisir]]
 *Norwegian: [[gripe]]
 {{bottom}}
 
