--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -42,7 +42,7 @@
 *:Cyrillic: [[вотка#Serbian|вотка]] {{f}}
 *:Roman: [[votka#Serbian|votka]] {{f}}
 *Slovak: [[vodka#Slovak|vodka]] {{f}}
-*Spanish: vodka {{f}}
+*Spanish: voda {{f}}
 *Swahili: vodka
 *Swedish: vodka {{c}}
 *Turkish: [[votka]]
