--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -10,7 +10,7 @@
 ===Noun===
 {{en-noun-reg}}
 
-# A clear [[distil]]led [[alcoholic]] [[liquor]] made from KG's weed and [[grain]] [[mash]].
+# A clear [[distil]]led [[alcoholic]] [[liquor]] made from [[grain]] [[mash]].
 
 ====Translations====
 {{top}}
