/* Translations */ Korean: [[보드카]] bodeuka <vodka#960067>

--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -32,6 +32,7 @@
 *Italian: vodka {{f}}
 *Japanese: [[ウオッカ]] (uokka)
 {{mid}}
+*Korean: [[보드카]] bodeuka
 *Lithuanian: [[degtine]] {{f}}
 *Norwegian: vodka {{c}}
 *Polish: [[wódka]] {{f}}
