--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -1,100 +1,90 @@
-==Danish==
-
-=== Noun ===
-
-#[[thorn]]
-
-[[Category:Danish nouns]]
-
-----
-
 ==English==
-=== Pronunciation ===
-*[[w:IPA|IPA]]: /pɪg/
+===Pronunciation===
+*{{IPA|/pɪg/}}
 
-=== Noun ===
+===Noun===
 {{wikipedia}}
 {{en-noun2|'''pig'''|'''[[pigs]] '''or''' [[swine]]'''}}
-#Any of several [[mammal]]s of the genus ''[[Sus]]'', having [[cloven]] [[hooves]], [[bristle]]s and a [[nose]] adapted for [[digging]]; especially the [[domesticated]] [[farm]] [[animal]] ''[[Sus scrofa]]'' 
-#The [[edible]] [[meat]] of such an animal; [[pork]]
+#Any of several [[mammal]]s of the genus ''[[Sus]]'', having [[cloven]] [[hooves]], [[bristle]]s and a [[nose]] adapted for [[digging]]; especially the [[domesticated]] [[farm]] [[animal]] ''[[Sus scrofa]]''.
+#The [[edible]] [[meat]] of such an animal; [[pork]].
 #A [[greedy]] person; someone who overeats or eats rapidly and noisily.
-#A [[nasty]] or [[disgusting]] person
+#A [[nasty]] or [[disgusting]] person.
 #A [[dirty]] person.
 #(''derogatory slang'') A [[police officer]].
 #A [[difficult]] [[problem]].
-#A [[block]] of [[cast]] [[metal]]; the [[mold]] in which it is cast
-#{{engineering}} A device for cleaning or inspecting the inside of an oil or gas pipline, or to separate different substances within the pipeline. Named for the pig-like squealing noise made by their progress
+#A [[block]] of [[cast]] [[metal]]; the [[mold]] in which it is cast.
+#{{engineering}} A device for cleaning or inspecting the inside of an oil or gas pipline, or to separate different substances within the pipeline. Named for the pig-like squealing noise made by their progress.
 
-==== Translations ====
+====Translations====
 '''mammal'''
 {{top}}
 *Albanian: [[derri]]
 *[[Amuzgo]]: [[kítzku]]
-*[[Arabic]]: [[خنزير]]
+*Arabic: {{ARchar|[[خنزير]]}} (χanzí:r) {{m}}
 *[[Basque]]: [[txerri]]
-*Belarussian: [[свіння]]
-*[[Bosnian]]: [[svinja]] ''f''
-*[[Breton]]: [[pemoc’h]] ''m'' [[moc'h]] ''plural''
-*Bulgarian: [[свиня]] ([[svinja]])
-*[[Catalan]]: [[porc]] ''m'', [[truja]] ''f''
+*Belarusian: [[свіння]] (svinnja) {{f}}
+*[[Bosnian]]: [[svinja]] {{f}}
+*[[Breton]]: [[pemoc’h]] {{m}} [[moc'h]] {{p}}
+*Bulgarian: [[свиня]] (svinja) {{f}}
+*[[Catalan]]: [[porc]] {{m}}, [[truja]] {{f}}
 *[[Cebuano]]: [[baboy]]
 *[[Chamorro]]: [[babui]]
 *Cherokee: [[ᏏᏆ]] (siqua)
 *CJK Characters: [[豬]], [[猪]]; [[豚]]
-*Chinese: [[豬]], [[猪]] (zhū, zhu)
+*Chinese: [[豬]], [[猪]] (zhū)
 *Croatian: [[svinja]]
 *Czech: [[prase]]
-*Danish: [[svin]] ''n''
-*Dutch: [[zwijn]] ''n'', [[varken]] ''n''
+*Danish: [[svin]] {{n}}
+*Dutch: [[zwijn]] {{n}}, [[varken]] {{n}}
 *[[Esperanto]]: [[porko]]
 *Estonian: [[siga#Estonian|siga]]
 *[[Faroese]]: [[svín]]
 *Finnish: [[sika#Finnish|sika]]
-*French: [[cochon]] ''m'', [[porc#French|porc]] ''m''
+*French: [[cochon]] {{m}}, [[porc#French|porc]] {{m}}
 *[[Frisian]]: [[baarch]]
 *[[Friulian]]: [[purcit]]
 *[[Gallegan]]: [[porco#Gallegan|porco]]
-*German: [[Schwein]] ''m''
-*Greek: [[γουρούνι]], [[χοίρος]] '' ''
+*German: [[Schwein]] {{m}}
+*Greek: [[γουρούνι]] (gurúni) {{n}}, [[χοίρος]] (khíros) {{m}}
 *Hungarian: [[sertés]], [[disznó]], [[malac]]
 *Icelandic: [[svín]]
 *[[Interlingua]]: [[porco#Interlingua|porco]]
 *Irish: [[muc]]
-*Italian: [[maiale]] ''m'', [[porco#Italian|porco]] ''m''
+*Italian: [[maiale]] {{m}}, [[porco#Italian|porco]] {{m}}
 *Japanese: [[豚]] ([[ぶた]], buta)
 *[[Ladin]]: [[porcel]]
 {{mid}}
 *Latin: [[porcus]] <!--do not put the scientific name here-->
-*Latvian: [[cūka]] ''f''
+*Latvian: [[cūka]] {{f}}
 *Lithuanian: [[kiaulė]]
 *[[Lower Sorbian]]: [[swinja]]
 *Macedonian: [[свиња]] ([[svinja]])
 *Malay: [[babi]]
 *[[Maltese]]: [[ħanżir]]
 *[[Maori]]: [[poaka]]
-*Norwegian: [[svin]] ''n'', [[gris]] ''m''
+*Norwegian: [[svin]] {{n}}, [[gris]] {{m}}
 *[[Occitan]]: [[pòrc]]
-*[[Persian]]: [[خوك]] (Khuk)
-*Polish: [[świnia]] '' ''
-*Portuguese: [[porco#Portuguese|porco]] ''m''
+*Persian: {{FAchar|[[خوک]]}} (khuk)
+*Polish: [[świnia]] {{f}}
+*Portuguese: [[porco#Portuguese|porco]] {{m}}
 *Romanian: [[porc#Romanian|porc]]
 *[[Romansh]]: [[portg]]
-*[[Romany]]: [[balo]] ''m'', [[bali]] ''f''
-*Russian: [[свинья]] ([[svin'ja]]) '' ''
+*[[Romany]]: [[balo]] {{m}}, [[bali]] {{f}}
+*Russian: [[свинья]] ([[svin’já]]) {{f}}
 *[[Sami]]: [[spiidni]]
-*Sardinian (northern): [[porcu]], [[mannale]] ''m'', [[sue]] ''f''
-*Sardinian (southern): [[procu]], [[mannali]] ''m'', [[sue]] ''f''
+*Sardinian (northern): [[porcu]], [[mannale]] {{m}}, [[sue]] {{f}}
+*Sardinian (southern): [[procu]], [[mannali]] {{m}}, [[sue]] {{f}}
 *Scottish: [[muc]]
 *Serbian: [[свиња]] ([[svinja]])
-*Slovak: [[prasa]] ''n'' (1)
-*Slovenian: [[pujs]] ''m'', [[prašič]] ''m'', [[svinja]] ''f''
-*Spanish: [[cerdo]] ''m'', [[cochino]] ''m'', [[puerco]] ''m''
+*Slovak: [[prasa]] {{n}} (1)
+*Slovene: [[pujs]] {{m}}, [[prašič]] {{m}}, [[svinja]] {{f}}
+*Spanish: [[cerdo]] {{m}}, [[cochino]] {{m}}, [[puerco]] {{m}}
 *Swahili: [[nguruwe]]
 *Swedish: [[gris]], [[svin]]
 *[[Tagalog]]: [[baboy]]
 *[[Tok Pisin]]: [[pik]]
 *Turkish: [[domuz]]
-*Ukrainian: [[свиня]] ([[svinja]])
+*Ukrainian: [[свиня]] ([[svynja]]) {{f}}
 *[[Upper Sorbian]]: [[swinjo]]
 *Welsh: [[mochyn]]
 {{bottom}}
@@ -102,31 +92,31 @@
 '''greedy person'''
 {{top}}
 *Finnish: [[ahmatti]]
-*French: [[cochon]] ''m'', [[porc#French|porc]] ''m''
+*French: [[cochon]] {{m}}, [[porc#French|porc]] {{m}}
 {{mid}}
-*Italian: [[porco]] ''m'', [[maiale]] ''m''
+*Italian: [[porco]] {{m}}, [[maiale]] {{m}}
 {{bottom}}
 
 '''nasty person'''
 {{top}}
-*Bosnian: [[svinja]] ''f''
+*Bosnian: [[svinja]] {{f}}
 *Finnish: [[ilkimys]]
-*French: [[salaud]] ''m'', [[cochon]] ''m'', [[porc#French|porc]] ''m''
+*French: [[salaud]] {{m}}, [[cochon]] {{m}}, [[porc#French|porc]] {{m}}
 {{mid}}
-*Italian: [[bastardo]] ''m'', bastarda ''f'', [[stronzo]] ''m'', stronza ''f''
-*Latvian: [[cūka]] ''f''
-*Slovene: [[svinja]] ''f'', [[prasec]] ''m''
+*Italian: [[bastardo]] {{m}}, bastarda {{f}}, [[stronzo]] {{m}}, stronza {{f}}
+*Latvian: [[cūka]] {{f}}
+*Slovene: [[svinja]] {{f}}, [[prasec]] {{m}}
 {{bottom}}
 
 '''dirty person'''
 {{top}}
-*Bosnian: [[svinja]] ''f''
+*Bosnian: [[svinja]] {{f}}
 *Finnish: [[sika#Finnish|sika]], [[possu]]
-*French: [[cochon]] ''m'', [[porc#French|porc]] ''m''
+*French: [[cochon]] {{m}}, [[porc#French|porc]] {{m}}
 {{mid}}
-*Italian: [[porco]] ''m'', [[maiale]] ''m''
-*Latvian: [[cūka]] ''f''
-*Slovene: [[prašič]] ''m''
+*Italian: [[porco]] {{m}}, [[maiale]] {{m}}
+*Latvian: [[cūka]] {{f}}
+*Slovene: [[prašič]] {{m}}
 {{bottom}}
 
 '''derogatory slang: police officer'''
@@ -146,7 +136,7 @@
 *[[blind pig]]
 *[[bush pig]]
 *[[flying pig]]
-*[[guinea pig]] (not related)<!--not a related species or not a related term??-->
+*[[guinea pig]] (not related)<!--not a related species-->
 *[[if pigs had wings]]
 *[[in a pig's eye]]
 *[[pig bed]]
@@ -176,9 +166,17 @@
 *[[year of the pig]]
 {{bottom}}
 
+
+----
+==Danish==
+===Noun===
+'''pig'''
+#[[thorn]]
+
 [[Category:Mammals]]
 [[Category:1000 English basic words]]
 [[Category:English irregular plurals]]
+[[Category:Danish nouns]]
 
 [[ang:pig]]
 [[el:pig]]
