/* Translations */ +Telugu <pig#961115>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -82,6 +82,7 @@
 *Swahili: [[nguruwe]]
 *Swedish: [[gris]], [[svin]]
 *[[Tagalog]]: [[baboy]]
+*Telugu: [[పంది]] (paMdi)
 *[[Tok Pisin]]: [[pik]]
 *Turkish: [[domuz]]
 *Ukrainian: [[свиня]] ([[svynja]]) {{f}}
