--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -2,7 +2,9 @@
 
 ===Etymology===
 [[Onomatopoeic]]
-[[Category:Onomatopoeia]]
+
+===Pronunciation===
+*{{audio|en-us-quack.ogg|Audio (US)}}
 
 ===Noun===
 {{en-noun-reg}}
@@ -12,7 +14,7 @@
 # a fraudulent [[doctor]] of [[medicine]], an [[impostor]] who claims to have qualifications to practice [[medicine]].
 #:''That doctor is nothing but a lousy '''quack'''!''
 # a [[charlatan]].
-#:''What a '''quack''' he is, saying that's an organic [[Viagra]]&#8482;!'' 
+#:''What a '''quack''' he is, saying that's an organic [[Viagra]]&#8482; !'' 
 # (''slang'') a [[doctor]].
 
 ====Translations====
@@ -48,6 +50,7 @@
 *Spanish: [[decir]] [[cuac]]
 
 [[Category:Animal sounds]]
+[[Category:Onomatopoeia]]
 [[Category:Dutch derivations]]
 
 [[ar:quack]]
