--- a/en/d/dud.26266.wikitext
+++ b/en/d/dud.26266.wikitext
@@ -8,43 +8,43 @@ Ultimately ''[[dudde]]''- ragged clothing ''(of uncertain origin, 1500's)''
 *:[[Rhymes:English:-ʌd|Rhymes: -ʌd]]
 
 ===Noun===
-'''dud''' ([[duds]])
+'''dud''' (''plural:'' [[duds]])
 
 # A broken or nonfunctional device that does not perform its intended function, such as a [[bomb]]
+
 
 ----
 
 ==Bosnian==
 ===Etymology===
-From Arabic [[توت|تُوت]] (''tut'') via Turkish [[dut]].
+From Arabic {{ARchar|[[توت|تُوت]]}} (''tut'') via Turkish [[dut]].
 ===Noun===
 '''dud''' {{m}}
 #[[mulberry]]
-[[Category:bs:Fruits]]
+
 
 ----
 
 ==Croatian==
-
-=== Noun ===
+===Noun===
 '''dud'''
 
 #[[mulberry]]
 
-[[Category:Croatian nouns]]
 
 ----
 
 ==Serbian==
 ===Etymology===
-From Arabic [[توت|تُوت]] (''tut'') via Turkish [[dut]].
+From Arabic {{ARchar|[[توت|تُوت]]}} (''tut'') via Turkish [[dut]].
 ===Noun===
 '''dud''' {{m}}
 #[[mulberry]]
 ====See also====
 *[[дуд#Serbian|дуд]]
-[[Category:sr:Fruits]]
 
-----
+[[Category:bs:Fruits]]
+[[Category:Croatian nouns]]
+[[Category:sr:Fruits]]
 
 [[it:dud]]
