--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -1,4 +1,5 @@
 ==English==
+
 ===Etymology===
 Via Norman French from Latin ''[[senior]]'', '''older''' or '''elder''', from ''[[senex]]'', '''old'''
 
@@ -10,15 +11,15 @@ Via Norman French from Latin ''[[senior]]'', '''older''' or '''elder''', from ''
 ===Noun===
 '''sir''' or '''Sir'''
 
-#A man of a higher [[rank]] or [[position]]
-#An address to a military [[superior]]
-#An address to any [[male]], especially if his [[name]] or proper [[address]] is unknown
+#A man of a higher [[rank]] or [[position]].
+#An address to a military [[superior]].
+#An address to any [[male]], especially if his [[name]] or proper [[address]] is unknown.
 #:Example: ''Excuse me, sir, could you tell me where the nearest bookstore is?''
 
 ====Translations====
-*[[Slovak]]: [[pán]] ''m'', [[pane]] ''m vocative''
+*[[Slovak]]: [[pán]] {{m}}, [[pane]] ''m vocative''
 
-===See Also===
+===See also===
 *[[madam]], [[ma'am]], [[mam]]
 *[[dame]]
 *[[mister]]
@@ -26,52 +27,55 @@ Via Norman French from Latin ''[[senior]]'', '''older''' or '''elder''', from ''
 *[[senex]]
 *[[senior]]
 
-[[Category:English pronouns]]
-[[Category:English prefixes]]
 
 ----
 
 ==Bosnian==
 ===Noun===
-'''sir''' {{m}} {{s}}
+'''sir''' {{m}}
 #[[cheese]]
-[[Category:bs:Foods]]
+
 
 ----
 
 ==Croatian==
-
-=== Noun ===
-'''sir'''
+===Noun===
+'''sir''' {{m}}
 
 #[[cheese]]
 
-[[Category:Croatian nouns]]
 
 ----
 
 ==Serbian==
 ===Noun===
-'''sir''' {{m}} {{s}}
+'''sir''' {{m}}
 #[[cheese]]
 ====Cyrillic spelling====
 *[[сир#Serbian|сир]]
-[[Category:sr:Foods]]
+
 
 ----
 
 ==Slovene==
 ===Noun===
-'''sir'''
+'''sir''' {{m}}
 #[[cheese]]
-[[Category:Slovene nouns]]
+
 
 ----
 
 ==Welsh==
 ===Noun===
-'''sir''' ''f'' (''pl'' siroedd)
+'''sir''' {{f}} ({{p}}: siroedd)
 #[[county]]
+
+[[Category:English pronouns]]
+[[Category:English prefixes]]
+[[Category:bs:Foods]]
+[[Category:Croatian nouns]]
+[[Category:sr:Foods]]
+[[Category:Slovene nouns]]
 [[Category:Welsh nouns]]
 
 [[fr:sir]]
