--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -17,7 +17,7 @@ Via Norman French from Latin ''[[senior]]'', '''older''' or '''elder''', from ''
 #:Example: ''Excuse me, sir, could you tell me where the nearest bookstore is?''
 
 ====Translations====
-*[[Slovak]]: [[pán]] {{m}}, [[pane]] ''m vocative''
+*Slovak: [[pán]] {{m}}, [[pane]] ''m vocative''
 
 ===See also===
 *[[madam]], [[ma'am]], [[mam]]
