--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -12,6 +12,7 @@ From Northern [[French]]
 '''rabbit''' (''plural:'' [[rabbits]])
 # Any of several small [[mammal]]s, of the family ''[[Leporidae]]'', with long ears, long [[hind leg]]s and a short, [[fluffy]] tail.
 #{{cricket}} a very poor [[batsman]]; selected as a [[bowler]] or [[wicket-keeper]]
+#{{Colloquial}} Someone new to something.
 
 =====Synonyms=====
 *[[bunny]] (''[[hypocoristic]]'')
