--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -91,7 +91,8 @@
 
 ====Translations to be checked====
 {{checktrans}}
-*French: [[pondérer]]
+
+*{{ttbc|French}}: [[pondérer]]
 
 [[de:weight]]
 [[fr:weight]]
