minor fmt, {{subst:lang}}, {{infl}} (en) <whistle#972447>

--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -1,13 +1,14 @@
 ==English==
+
 ===Etymology===
-:Middle English ''whistlen''; Anglo-Saxon ''hwistlan''.
+Middle English ''whistlen''; Anglo-Saxon ''hwistlan''.
 
 ===Verb===
-'''to whistle''' (''Inflected forms'': whistled, whistling, whistles)
+{{en-infl-reg-other-e|whistl|e}}
 
-#to make a shrill, high-pitched sound by forcing air through the mouth. To produce a whistling sound, restrictions to the flow of air are created using the teeth, tongue and lips.
-#to move in such a way as to create a whistling sound.
-#:''A bullet whistled past.''
+# To make a shrill, high-pitched sound by forcing air through the mouth. To produce a whistling sound, restrictions to the flow of air are created using the teeth, tongue and lips.
+# To move in such a way as to create a whistling sound.
+#:''A bullet '''whistled''' past.''
 
 ====Translations====
 {{top}}
@@ -23,19 +24,18 @@
 *Portuguese: [[apitar]], [[assobiar]]
 *Russian: [[свистеть]] (svistét’)
 *Spanish: [[chiflar]], [[silbar]]
-*{{te}}: [[ఈల వేయు]] (eela vEyu), [[బూర ఊదు]] (boora oodu)
+*[[Telugu]]: [[ఈల వేయు]] (eela vEyu), [[బూర ఊదు]] (boora oodu)
 {{bottom}}
 
 ===Noun===
+{{en-noun-reg}}
 
-'''whistle'''
+# A device designed to be placed in the mouth in order to make a whistling sound.
+# A shrill, high-pitched sound made by whistling.
+# Any high-pitched sound similar to the sound made by whistling.
+# (''slang'') A suit.
 
-#a device designed to be placed in the mouth in order to make a whistling sound.
-#a shrill, high-pitched sound made by whistling.
-#any high-pitched sound similar to the sound made by whistling.
-#(''slang'') a suit
-
-=== Translations ===
+===Translations===
 {{top}}
 *Arabic: {{ARchar|[[صفارة]]}} {{Unicode|(ʂufára)}} {{f}}
 *[[Breton]]: [[c'hwitell]] {{f}}, c'hwitelloù {{p}} (1); [[c'hwitelladenn]] {{f}}, c'hwitelladennoù {{p}} (2,3)
@@ -58,7 +58,7 @@
 *Spanish: [[silbato]] {{m}}
 *Swahili: [[kipenga]]
 *Swedish: [[visselpipa]]
-*{{te}}: [[ఈల]] (eela), [[బూర]] (boora)
+*[[Telugu]]: [[ఈల]] (eela), [[బూర]] (boora)
 {{bottom}}
 
 [[Category:1000 English basic words]]
