image, zh, ko, category:Rodents <squirrel#973802>

--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -1,6 +1,7 @@
 {{wikipedia}}
 ==English==
-[[Category:Mammals]]
+[[Image:Sciurus carolinensis.jpg|thumb|An Eastern Gray Squirrel]]
+[[Category:Mammals]] [[Category:Rodents]]
 === Pronunciation ===
 *[[w:IPA|IPA]]: /'skwʌɽəl/
 
@@ -19,6 +20,7 @@
 *Bulgarian: [[катерица]] (katerica)
 *[[Catalan]]: [[esquirol]] ''m''
 *[[Cherokee]]: [[ᏌᎳᎵ]] (salali)
+*Chinese: [[松鼠]] sōngshǔ
 *Croatian: [[vjeverica]] ''f''
 *Czech: [[veverka]] ''f''
 *Danish: [[egern]]
@@ -41,6 +43,7 @@
 *Italian: [[scoiattolo]] ''m''
 {{mid}}
 *Japanese: [[栗鼠]] ([[りす]], risu)
+*Korean: [[다람쥐]] daramjwi
 *[[Ladino]]: [[schirata]]
 *Latin: [[Sciurus vulgaris]] '' ''
 *Latvian: [[vāvere]]
@@ -80,7 +83,7 @@
 
 '''squirrel around'''
 # move or search erratically, esp. as if hurried or confused.
-    My mother warned me not to squirrel around in my dad's workshop.
+#:My mother warned me not to squirrel around in my dad's workshop.
 
 [[bg:squirrel]]
 [[el:squirrel]]
