--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -1,12 +1,12 @@
 ==English==
 [[Category:Mammals]]
 
-=== Pronunciation ===
+===Pronunciation===
 *(US) [[w:IPA|IPA]]: /'bæʤəɻ/
 *(UK) [[w:IPA|IPA]]: /'bæʤə(r)/
 *{{audio|en-us-badger.ogg|Audio (US)}}
 
-=== Noun ===
+===Noun===
 [[Image:Badger.png|thumbnail|right|A badger]]
 '''badger''' (''plural'' [[badgers]])
 
@@ -19,70 +19,70 @@
 *Family: [[Mustelidae]]
 *[[Meles meles]]<!-- moved from Latin but not checked -->
 
-==== Translations ====
+====Translations====
 
 [[animal[[
 {{top}}
 *[[Afrikaans]]: [[ratel]]
-*[[Albanian]]: [[baldosa]]
+*Albanian: [[baldosa]]
 *[[Basque]]: [[azkonar]]
 *[[Belarusian]]: [[барсук]]
 *[[Breton]]: [[broc’h]]
-*[[Bulgarian]]: [[язовец]] (jazovec)
+*Bulgarian: [[язовец]] (jazovec)
 *[[Catalan]]: [[teixó]]
 *[[Cherokee]]: [[ᎤᎫᎾ]] (uguna)
-*[[Croatian]]: [[jazavac]]
-*[[Czech]]: [[jezevec]]
-*[[Danish]]: [[grævling]]
-*[[Dutch]]: [[das]] ''m''
+*Croatian: [[jazavac]]
+*Czech: [[jezevec]]
+*Danish: [[grævling]]
+*Dutch: [[das]] ''m''
 *[[Esperanto]]: [[melo]]
 *[[Estonian]]: [[mäger]], [[määr]]
 *[[Faroese]]: [[grevligur]]
-*[[Finnish]]: [[mäyrä]]
-*[[French]]: [[blaireau]] ''m''
+*Finnish: [[mäyrä]]
+*French: [[blaireau]] ''m''
 *[[Frisian]]: [[das]]
 *[[Friulian]]: [[tac]], [[tas]]
 *[[Galician]]: [[teixugo]], [[porco teixo]]
-*[[German]]: [[Dachs]] ''m''
-*[[Greek]]: [[ασβός]]
-*[[Hebrew]]: [[גיריט|גִּירִיט]] ''f''
-*[[Hungarian]]: [[borz]]
-*[[Icelandic]]: [[greifingi]]
+*German: [[Dachs]] ''m''
+*Greek: [[ασβός]]
+*Hebrew: [[גיריט|גִּירִיט]] ''f''
+*Hungarian: [[borz]]
+*Icelandic: [[greifingi]]
 *[[Irish]]: [[broc]]
-*[[Italian]]: [[tasso]] ''m''
+*Italian: [[tasso]] ''m''
 {{mid}}
-*[[Japanese]]: [[アナグマ]]
+*Japanese: [[アナグマ]]
 *[[Ladin]]: [[tas]]
 *[[Latvian]]: [[āpsis]]
 *[[Lithuanian]]: [[barsùkas]], [[opšrùs]]
 *[[Lower Sorbian]]: [[jazw]], [[šwińc]]
 *[[Macedonian]]: [[jазовец]] ([[jazovec]])
-*[[Norwegian]]: [[grevling]]
+*Norwegian: [[grevling]]
 *[[Occitan]]: [[tais]], [[rabàs]]
-*[[Polish]]: [[borsuk]]
-*[[Portuguese]]: [[texugo]]
-*[[Romanian]]: [[viezure]]
+*Polish: [[borsuk]]
+*Portuguese: [[texugo]]
+*Romanian: [[viezure]]
 *[[Romansh]]: [[tais]]
-*[[Russian]]: [[барсук]] (barsuk)
+*Russian: [[барсук]] (barsuk)
 *[[Sami]]: [[mievri]]
 *[[Sardinian]]: [[tassu]], [[cane de ribu]]
 *[[Scottish]]: [[broc]]
-*[[Serbian]]: [[jазавац]] (jazavac)
-*[[Slovak]]: [[jazvec]] ''m''
+*Serbian: [[jазавац]] (jazavac)
+*Slovak: [[jazvec]] ''m''
 *[[Slovenian]]: [[jazbec]] ''m''
-*[[Spanish]]: [[tejón]] ''m''
-*[[Swedish]]: [[grävling]]
-*[[Turkish]]: [[porsuk]]
+*Spanish: [[tejón]] ''m''
+*Swedish: [[grävling]]
+*Turkish: [[porsuk]]
 *[[Ukrainian]]: [[борсук]] (borsuk)
 *[[Upper Sorbian]]: [[šwinc]]
-*[[Welsh]]: [[mochyn daear]]
+*Welsh: [[mochyn daear]]
 {{bottom}}
 
 [[native of Wisconsin[[
 {{top}}
-*[[French]]: [[habitant]] ''m'' du Wisconsin
+*French: [[habitant]] ''m'' du Wisconsin
 {{mid}}
-*[[Italian]]: [[abitante]] ''m'' dello Wisconsin
+*Italian: [[abitante]] ''m'' dello Wisconsin
 {{bottom}}
 
 ====See also====
@@ -95,19 +95,12 @@
 
 ====Translations====
 '''pester'''
-{| border=0  width=100%
-|-
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-*'''Dutch''': [[lastigvallen]], [[plagen]]
-*'''German''': [[belästigen]], [[plagen]]
-|}
-| width=1% |
-|bgcolor="#FFFFE0" valign=top width=48%|
-{|
-*'''Tok Pisin''': [[bagarapim]] [[sindaun]] bilong<!-- if these words make up a single idiom, they should be wikified as a single entity-->
-|}
-|}
+{{top}}
+*Dutch: [[lastigvallen]], [[plagen]]
+*German: [[belästigen]], [[plagen]]
+{{mid}}
+*Tok Pisin: [[bagarapim]] [[sindaun]] bilong<!-- if these words make up a single idiom, they should be wikified as a single entity-->
+{{bottom}}
 
 [[bg:badger]]
 [[io:badger]]
