--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -7,9 +7,9 @@
 Middle English < Old English '''[[æt]]''' < Proto-Germanic '''*at''', '''*az''' < Proto-Indo-European '''[[*ad-]]''' (to, near, at).
 
 ===Pronunciation===
-* [[AHD]] ăt
-* [[IPA]] [æt], reduced form [ət]
-* [[SAMPA]] <tt>[{t]</tt>
+*{{AHD|ăt}}
+*{{IPA|[æt], reduced form [ət]}}
+*{{SAMPA|[{t]}}
 *{{audio|en-us-at.ogg|Audio (US)}}
 *:[[Rhymes:English:-æt|Rhymes: -æt]]
 
@@ -17,9 +17,9 @@ Middle English < Old English '''[[æt]]''' < Proto-Germanic '''*at''', '''*az'''
 '''at'''
 
 # In or very near a particular [[place]].
-#: ''At that precise position, at Jim's house.''
+#: ''At that precise position, at Jim’s house.''
 # (Indicating time) [[Simultaneous]] with.
-#: ''At six o'clock, at closing time.''
+#: ''At six o’clock, at closing time.''
 # In the [[direction]] of (often in an unfocused or uncaring manner).
 #: ''He threw the ball at me, he shouted at her.''
 # [[occupy|Occupied]] in (activity).
@@ -27,28 +27,28 @@ Middle English < Old English '''[[æt]]''' < Proto-Germanic '''*at''', '''*az'''
 # The logogram [[@]].
 
 ====Usage notes====
-#: ''He threw the ball to me'' - (so I could catch it).
-#: ''He threw the ball at me'' - (trying to hit me with it).
+#: ''He threw the ball to me'' &mdash; (so I could catch it).
+#: ''He threw the ball at me'' &mdash; (trying to hit me with it).
 
-#: ''He talked to her'' - (conversationally).
-#: ''He shouted at her'' - (aggressively).
+#: ''He talked to her'' &mdash; (conversationally).
+#: ''He shouted at her'' &mdash; (aggressively).
 
 ====Translations====
 '''at''' (in or very near a particular place)
 {{top}}
-*Arabic: {{ARchar|[[عند]]}} ({{IPAchar|[[ʕand]]}})  
+*Arabic: {{ARchar|[[عند]]}} ({{Unicode|[[ʕand]]}})  
 *[[Breton]]: [[e#Breton|e]]
 *Bulgarian: [[в#Bulgarian|в]] (v), [[на#Bulgarian|на]] (na), [[при#Bulgarian|при]] (pri), [[до#Bulgarian|до]] (do)
 *Chinese: [[在]] (zài)
 *Czech: [[u#Czech|u]]
 *Danish: [[på]]
 *Dutch: [[op]], [[bij]]
-*[[Esperanto]]: [[sur#Esperanto|sur]]
+*Esperanto: [[sur#Esperanto|sur]]
 *[[Faeroese]]: [[í]] / [[á]] / [[hjá]] / [[til]]
 *Finnish: [[-lla]] / [[-llä]] ''([[adessive case]])''; <br> [[-ssa]] / [[-ssä]] ''([[inessive case]])''
 *French: [[à]], [[en#French|en]]
 *German: [[an#German|an]], [[auf]], [[bei]], [[in#German|in]]
-*Greek: [[στον]] {{m}} (ston), [[στη]] {{f}} (sti), [[στο]] {{n}} (sto); [[στους]] ''m pl'' (stous), [[στις]] ''f pl'' (stis), [[στα]] ''n pl'' (sta)
+*Greek: [[στον]] (ston) {{m}}, [[στη]] (sti) {{f}}, [[στο]] (sto) {{n}}; [[στους]] (stous) ''m pl'', [[στις]] (stis) ''f pl'', [[στα]] (sta) ''n pl''
 *Hungarian: [[-n]] / [[-on]] / [[-en]] / [[-ön]] ''([[superessive case]])''; [[-nál]] / [[-nél]] ''([[adessive case]])''
 *[[Ido]]: [[ye]]
 *[[Interlingua]]: [[a#Interlingua|a]], [[in#Interlingua|in]]
@@ -76,7 +76,7 @@ Middle English < Old English '''[[æt]]''' < Proto-Germanic '''*at''', '''*az'''
 *:''At work'' = på jobbet
 *:''At the table'' = vid bordet
 *[[Telugu]]: [[వద్ద]] (vadda)
-*Thai: [[ณ]] (nā)
+*Thai: {{THchar|[[ณ]]}} (nā)
 *Turkish: [[-da]], [[-de]]
 *Vietnamese: [[ở tại]], [[lúc]], [[vào]]
 {{bottom}}
@@ -89,11 +89,11 @@ Middle English < Old English '''[[æt]]''' < Proto-Germanic '''*at''', '''*az'''
 *Czech: [[u#Czech|u]]
 *Danish: [[på]]
 *Dutch: [[om]]
-*[[Esperanto]]: [[je#Esperanto|je]]
+*Esperanto: [[je#Esperanto|je]]
 *Finnish: [[-lta]] / [[-ltä]] ''([[ablative case]])''; <br> [[-na]] / [[-nä]] ''([[essive case]])''
 *French: [[à]]
 *German: [[um]]
-*Greek: [[στον]] {{m}} (ston), [[στη]] {{f}} (sti), [[στο]] {{n}} (sto); [[στους]] ''m pl'' (stous), [[στις]] ''f pl'' (stis), [[στα]] ''n pl'' (sta)
+*Greek: [[στον]] (ston) {{m}}, [[στη]] (sti) {{f}}, [[στο]] (sto) {{n}}; [[στους]] (stous) ''m pl'', [[στις]] (stis) ''f pl'', [[στα]] (sta) ''n pl''
 *Hungarian: [[-kor]] ''([[temporalis case]])''
 *[[Interlingua]]: [[a#Interlingua|a]]
 {{mid}}
@@ -120,12 +120,12 @@ Middle English < Old English '''[[æt]]''' < Proto-Germanic '''*at''', '''*az'''
 *Czech: [[u#Czech|u]]
 *Danish: [[på]]
 *Dutch: [[op]]
-*[[Esperanto]]: [[al#Esperanto|al]]
+*Esperanto: [[al#Esperanto|al]]
 *[[Faeroese]]: [[eftir]] ''([[dative case]])''
 *Finnish: [[-lle]] ''([[allative case]])''; [[kohti]]
 *French: [[à]]
 *German: [[nach]], [[zu]]
-*Greek: [[στον]] {{m}} (ston), [[στη]] {{f}} (sti), [[στο]] {{n}} (sto); [[στους]] ''m pl'' (stous), [[στις]] ''f pl'' (stis), [[στα]] ''n pl'' (sta)
+*Greek: [[στον]] (ston) {{m}}, [[στη]] (sti) {{f}}, [[στο]] (sto) {{n}}; [[στους]] (stous) ''m pl'', [[στις]] (stis) ''f pl'', [[στα]] (sta) ''n pl''
 *Hungarian: [[-t]] (''[[accusative case]]'')
 *[[Interlingua]]: [[a#Interlingua|a]]
 {{mid}}
@@ -143,14 +143,17 @@ Middle English < Old English '''[[æt]]''' < Proto-Germanic '''*at''', '''*az'''
 *Swedish: [[på]], [[mot#Swedish|mot]] 
 *:Han kastade sten mot mig = ''He threw stones at (=towards) me''
 *:Han kastade sten på mig = ''He threw stones at me'' (''...and hit me'')
-*Thai: [[ณ]] (nā)
+*Thai: {{THchar|[[ณ]]}} (nā)
 {{bottom}}
 
 
 ===Noun===
 '''at'''
-# A subdivision of the [[Laos]] [[kip]], 100 at=1 kip
+#''(currency)'' A subdivision of the [[Laotian]] [[kip]], 100 at=1 kip
+
 [[Category:Currency]]
+
+
 ----
 
 ==Danish==
@@ -160,6 +163,7 @@ Middle English < Old English '''[[æt]]''' < Proto-Germanic '''*at''', '''*az'''
 
 #[[that]]
 
+
 ----
 ==Dutch==
 
@@ -167,6 +171,7 @@ Middle English < Old English '''[[æt]]''' < Proto-Germanic '''*at''', '''*az'''
 '''at'''
 
 #singular past tense of [[eten]]
+
 
 ----
 ==Latin==
@@ -176,12 +181,14 @@ Middle English < Old English '''[[æt]]''' < Proto-Germanic '''*at''', '''*az'''
 
 [[Category:Latin conjunctions]]
 
+
 ----
 ==Norwegian==
 ===Conjunction===
 [[Category:Norwegian conjunctions]]
 '''at'''
 #[[that#Conjunction|that]]
+
 
 ----
 ==Turkish==
