--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -33,7 +33,7 @@
 *Japanese: [[ウオッカ]] (uokka)
 {{mid}}
 *Korean: [[보드카]] bodeuka
-*Lithuanian: [[degtine]] {{f}}
+*Lithuanian: [[degtinė]] {{f}}
 *Norwegian: vodka {{c}}
 *Polish: [[wódka]] {{f}}
 *Portuguese: [[vodca]] {{f}}
