--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -7,7 +7,7 @@
 ===Noun===
 '''advertisement'''  (''plural:'' '''[[advertisements]]''')
 # A [[publication]] produced in order to sell some [[commodity]], [[service]] or similar.
-# A commercial solicitation in a [[publication]] produced in order to sell some [[commodity]], [[service]] or similar.
+# A commercial solicitation in a [[publication]] designed to sell some [[commodity]], [[service]] or similar.
 
 ====Related terms====
 *[[ad]]
