+fi, cat <bend#981194>

--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -58,12 +58,16 @@
 ====Translations====
 ;curve
 {{top}}
-*German: [[Kurve]] {{f}}
+*Finnish: [[mutka]]
 {{mid}}
+*German: [[Kurve]] {{f}}
 {{bottom}}
 
 ===References===
 {{R:Heraldry 1862}}
+
+[[Category:English verbs]]
+[[Category:English nouns]]
 
 [[fr:bend]]
 [[gl:bend]]
