--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -3,6 +3,7 @@
 ===Pronunciation===
 *SAMPA: /"{dv@(`):%taIzment/
 *"ad-v&r-'tIz-m&nt; &d-'v&r-t&z-m&nt, -t&-sm&nt
+*{{audio|en-us-advertisement.ogg|Audio (US)}}
 
 ===Noun===
 '''advertisement'''  (''plural:'' '''[[advertisements]]''')
