--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -31,6 +31,7 @@
 *Korean: [[구부리다]]
 *Romanian: [[indoi]]
 *Spanish: [[curvar]]
+*Telugu: [[వంచు]] (vaMchu)
 {{bottom}}
 
 ===Noun===
@@ -61,6 +62,7 @@
 *Finnish: [[mutka]]
 {{mid}}
 *German: [[Kurve]] {{f}}
+*Telugu: [[వంపు]] (vaMpu)
 {{bottom}}
 
 ===References===
