--- a/en/b/bitten.6800.wikitext
+++ b/en/b/bitten.6800.wikitext
@@ -25,7 +25,7 @@
 ----
 ==German==
 ===Etymology===
-Old High German ''bitten'', Old English ''biddan''
+Old High German ''bitten'', originally ''biddan''
 ===Verb===
 '''bitten''' (''third-person singular simple present'' '''[[bittet]]''', ''[[past tense]]'' '''[[bat]]''', ''[[past participle]]'' '''[[gebeten]]''')
 
