--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -148,11 +148,11 @@ Finnish: [[kaari]], [[pääjakso]]
 #[[division#English|division]]; act of dividing (e.g. numbers); large military unit; section of a company
 #(''sports'') division ''or'' [[league]]; a organization of sports teams that habitually play against each other for a championship; the level on which a certain team plays, as compared to others
 
-
 [[et:division]]
 [[fr:division]]
 [[io:division]]
 [[it:division]]
+[[hu:division]]
 [[pl:division]]
 [[fi:division]]
 [[zh:division]]
