--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -52,11 +52,12 @@
 *[[renvoi]]
 
 ----
+
 ==German==
 ===Pronunciation===
 {{IPA|[ʁoːt]}}
 ===Etymology===
-Old High German ''rōt'', Old Saxon ''rōd''
+Old High German ''rōt'', akin to Old Saxon ''rōd'', compare Dutch [[rood]]
 ===Adjective===
 '''rot'''
 # [[red]]
