--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -143,6 +143,18 @@
 
 ----
 
+==Catalan==
+===Etymology===
+Latin [[milium]]
+===Noun===
+'''mill'''
+
+# [[millet]]
+
+[[Category:Catalan nouns]]
+
+----
+
 ==[[Scots Gaelic]]==
 ===Verb===
 '''Mill'''
