--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -16,6 +16,17 @@
 *Swedish: [[ruttna]]
 
 [[Category:English intransitive verbs]]
+
+----
+
+==Catalan==
+===Noun===
+'''rot'''
+
+# [[belcher]]
+
+[[Category:Catalan nouns]]
+
 ----
 
 ==Dutch==
