robot  Adding: hu <bid#992973>

--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -93,6 +93,7 @@ A conflation of two Old English verbs: [[biddan]] ‘ask, demand’, and [[beoda
 [[fr:bid]]
 [[ko:bid]]
 [[it:bid]]
+[[hu:bid]]
 [[ru:bid]]
 [[uk:bid]]
 [[zh:bid]]
