/* Noun */ Translations (Telugu) <pledge#1006178>

--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -18,6 +18,19 @@
 # A [[drinking]] [[toast]].
 # ''(the pledge):'' A promise to [[abstain]] from [[drinking]] [[alcohol]].
 
+====Translations====
+'''solemn promise'''
+{{top}}
+{{mid}}
+*Telugu: [[ప్రతిజ్ఞ]] (prathigna), [[ప్రతిన]] (prathina)
+{{bottom}}
+
+'''security to payment'''
+{{top}}
+{{mid}}
+*Telugu: [[తనఖా]] (tanakhaa)
+{{bottom}}
+
 [[ang:pledge]]
 [[fr:pledge]]
 [[io:pledge]]
