--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -18,6 +18,7 @@
 *Interlingua: [[si#Interlingua|si]]
 *Italian: [[si#Italian|si]]
 {{mid}}
+*Polish: [[tak]]
 *Portuguese: [[sim]]
 *Serbian:
 *:Cyrillic: [[ја#Serbian|ја]]
