--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -4,10 +4,10 @@
 
 {{wikipedia}}
 ====Etymology====
-From Old English ''[[iland]]''.  The S was added by confusion with French ''[[isle]]'', which is not related but is instead from Latin ''[[insula]]''. Anglo-Saxon ''[[&#299;egland]]'', pleonastic for ''[[&#299;eg]]'', "island", "watery land". Cognate with German ''[[Aue]]'', "meadow", and Latin ''[[aqua]]''. Confer German ''[[Eiland]]'', Old Norse ''[[eyland]]'', and English ''[[ey]]'' as in [[Anglesey]], [[Bardsey]], [[Ely]].
+Old English [[iegland|īeġland]].  The S was added by confusion with French ''[[isle]]'', which is not related but is instead from Latin ''[[insula]]''.  Cognate with German ''[[Aue]]'', "meadow", and Latin ''[[aqua]]''.  Compare German ''[[Eiland]]'', Old Norse ''[[eyland]]'', and English ''[[ey]]'' as in [[Anglesey]], [[Bardsey]], [[Ely]].
 
 ===Noun===
-'''island'''  (''plural:'' [[islands]])
+{{en-noun|island|islands}}
 # An [[area]] of [[land]] totally [[surround]]ed by [[water]].
 # An [[entity]] [[surround]]ed by other entities that are very [[different]] from itself: ''an island of tranquility'', a calm place surrounded by a noisy environment.
 
@@ -51,6 +51,7 @@ From Old English ''[[iland]]''.  The S was added by confusion with French ''[[is
 *Lithuanian: [[sala]] {{f}}
 *Malay: [[pulau]]
 *Norwegian: [[øy]] ''m/f'', [[øyer]] ''pl''
+*Old English: [[ieg|īeġ]] ''f''
 *Polish: [[wyspa]] {{f}}
 *Portuguese: [[ilha]] {{f}}, ilhas {{p}}
 *Romanian: [[insulã]] {{f}}, [[insule]] {{p}}
