--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -29,6 +29,7 @@ Old English [[iegland|īeġland]].  The S was added by confusion with French ''[
 *Czech: [[ostrov]] {{m}}
 *Danish: [[ø]], (''of sand'') [[holm]], (''of rock'') [[skær]]
 *Dutch: [[eiland]] {{n}}, eilanden {{p}}
+*Esperanto: [[insulo]]
 *Estonian: [[saar]], [[saared]] {{p}}
 *[[Faroese]]: [[oyggj]] {{f}}, (small island) [[hólmur]] {{m}}, (''of rock'') [[sker]] {{n}}
 *Fijian: [[yanuyanu]]
@@ -37,6 +38,7 @@ Old English [[iegland|īeġland]].  The S was added by confusion with French ''[
 *German: [[Insel]] {{f}}, Inseln {{p}}
 *Greek: [[νήσος]] [ˈniso̞s] {{f}}, [[νησί]] [niˈsi] {{n}}
 *Hebrew: [[אי]] (i) {{m}}
+*Hungarian: [[sziget]]
 *Ido: [[insulo]]
 *Indonesian: [[pulau]]
 *[[Interlingua]]: [[insula]]
