/* Japanese [[kanji]] */ +noun sense; +[[Category:ja:Time]] <月#1015863>

--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -92,11 +92,10 @@ For an example of a character with multiple pronunciations (and hence Romanizati
 
 ----
 
-== Japanese [[kanji]] ==
-
-* '''Readings'''
-** '''[[On]]''': [[げつ]] (getsu), [[がつ]] (gatsu)
-** '''[[Kun]]''': [[つき]] (tsuki)
+==Japanese==
+===[[Kanji]]===
+{{kanji|on readings=[[げつ]] (''getsu''), [[がつ]] (''gatsu'')
+|kun readings=[[つき]] (''tsuki'')}}
 
 ===Compounds===
 *[[月下氷人]]
@@ -128,8 +127,14 @@ For an example of a character with multiple pronunciations (and hence Romanizati
 *[[十二月]]
 *[[日進月歩]]
 
-* '''Other info''': [[つき]] (tsuki) is moon, [[げつ]] (getsu) is moon and month, [[がつ]]  (gatsu) is the counter for months of the year, ([[六]]月 is June).
+====Other info====
+When used in compounds counting a number of months, 月 is pronounced as [[げつ]] (''getsu''). When used in compounds for modern months of the year, it is pronounced as [[がつ]] (''gatsu''). When used for poetic or lunar months, it is pronounced as [[つき]] (''tsuki'').
 
+===Noun===
+{{janoun|つき|tsuki}}
+# moon, month
+
+[[Category:ja:Time]]
 ----
 
 == Korean [[Hanja]] ==
