--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -9,7 +9,7 @@
 {{en-noun-reg}}
 
 # a part of a whole
-#{{arithmetic}} a [[rational number]] written either as two [[integer]]s, one over the other and separated by a horizontal bar called a [[solidus]], or side by side and separated by a [[slash]], or in [[decimal notation]] using a [[decimal point]].
+#{{arithmetic}} a [[rational number]] written either as two [[integer]]s, one over the other and separated by a horizontal bar called a [[vinculum]], or side by side and separated by a [[slash]], or in [[decimal notation]] using a [[decimal point]].
 # a comparatively small part
 #:''a fraction of the cost''
 #{{rfv-sense}} a part of a particular society or group
