--- a/en/m/maximum.34063.wikitext
+++ b/en/m/maximum.34063.wikitext
@@ -31,6 +31,7 @@ MAAHX-im-muhm
 {{mid}}
 *Latin: maximum
 *Romanian: maximum
+*Telugu: [[గరిష్ఠం]] (garishThaM)
 {{bottom}}
 
 '''greatest value'''
@@ -38,6 +39,7 @@ MAAHX-im-muhm
 *Chinese: [[極]][[大]][[值]] (zuidazhi, zui4da4zhi2)
 {{mid}}
 *German: [[Maximum]] ''n''
+*Telugu: [[గరిష్ఠం]] (garishThaM)
 {{bottom}}
 
 ===Adjective===
@@ -50,6 +52,7 @@ MAAHX-im-muhm
 {{top}}
 *Finnish: [[maksimaalinen]]
 {{mid}}
+*Telugu: [[గరిష్ఠ]] (garishTha)
 {{bottom}}
 
 ===Derived terms===
