/* Translations */ +Telugu <minimum#1021210>

--- a/en/m/minimum.34064.wikitext
+++ b/en/m/minimum.34064.wikitext
@@ -24,6 +24,7 @@ Greek ''min'' little + ''im'' in ''um'' I don't know someone help me with this w
 *Latin: [[minimum#Latin|minimum]]
 *Romanian: [[minimum#Romanian|minimum]]
 *Swedish: [[minimum#Swedish|minimum]] ''n''
+*Telugu: [[కనిష్టం]] (kanishTaM)
 {{bottom}}
 
 [[Category:English irregular plurals]]
