--- a/en/m/malam.4517.wikitext
+++ b/en/m/malam.4517.wikitext
@@ -11,6 +11,9 @@
 #[[night]]
 #[[wax]]
 
+[[Category:Indonesian language]]
+[[Category:Indonesian nouns]]
+
 [[et:malam]]
 [[fi:malam]]
 [[sv:malam]]
