/* Translations to be checked */ cjkv chars <division#1023354>

--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -120,6 +120,7 @@ Finnish: [[kaari]], [[pääjakso]]
 *{{ttbc|Estonian}}: [[jagamine]] (1)
 *{{ttbc|Frisian}}: [[dieling]], [[deling]]
 *{{ttbc|Italian}}: [[divisione]] ''f'' (2)
+*{{ttbc|CJKV Characters}}: [[段]]
 *{{ttbc|Polish}}: [[dzielenie]] ''n'' (1), [[dywizja]] ''f'' (2)
 
 ===Derived terms===
