--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -122,6 +122,7 @@ Finnish: [[kaari]], [[pääjakso]]
 *{{ttbc|Italian}}: [[divisione]] ''f'' (2)
 *{{ttbc|CJKV Characters}}: [[段]]
 *{{ttbc|Polish}}: [[dzielenie]] ''n'' (1), [[dywizja]] ''f'' (2)
+*{{ttbc|Spanish}}: [[división]] {{f}}
 
 ===Derived terms===
 *[[divisional]]
