/* Translations */ +Telugu <quadrilateral#1023534>

--- a/en/q/quadrilateral.4319.wikitext
+++ b/en/q/quadrilateral.4319.wikitext
@@ -10,6 +10,7 @@
 *Italian: [[quadrilatero]] ''m''
 *Japanese: [[四辺形]] (shihenkei)
 *Romanian: [[patrulater]], [[cadrilater]]
+*Telugu: [[చతుర్భుజి]] (chaturbhuji)
 
 ===Adjective===
 '''quadrilateral'''
