--- a/en/m/mega.34066.wikitext
+++ b/en/m/mega.34066.wikitext
@@ -31,8 +31,8 @@ From the prefix [[mega-]].
 ===See also===
 *[[mega-]]
 
-
 ----
+
 ==Icelandic==
 ===Verb===
 '''mega'''
@@ -41,15 +41,16 @@ From the prefix [[mega-]].
 
 [[Category:Icelandic verbs]]
 
-
 ----
+
 ==Indonesian==
+===Etymology===
+From Sanskrit
 ===Noun===
 '''mega'''
 
 #[[cloud]]
 
-[[Category:Indonesian language]]
 [[Category:Indonesian nouns]]
 
 [[de:mega]]
