--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -15,6 +15,7 @@
 *French: [[ouais]]
 *Finnish: [[joo]], [[juu]]
 *German: [[ja]]
+*Hindi: [[haa]]
 *Interlingua: [[si#Interlingua|si]]
 *Italian: [[si#Italian|si]]
 {{mid}}
