/* Translations */ +Telugu <prisoner of war#1033524>

--- a/en/p/prisoner of war.4326.wikitext
+++ b/en/p/prisoner of war.4326.wikitext
@@ -7,6 +7,7 @@
 #:''As a prisoner of war, he was interrogated by his enemy captors.''
 
 ====Translations====
+{{top}}
 *Chinese: [[战俘]]/[[戰俘]] (zhàn fú)
 *Czech: [[zajatec]] ''m'', [[válečný zajatec]] ''m''
 *Dutch: [[krijgsgevangene]]
@@ -16,6 +17,7 @@
 *Greek, Modern: [[αιχμάλωτος πολέμου]] (aichmál&#333;tos polémou)
 *[[Interlingua]]: [[prisionero de guerra]] 
 *Italian: [[prigioniero di guerra]] ''m''
+{{mid}}
 *Japanese: [[捕虜]] (horyo)
 *Korean: [[전쟁 포로]]
 *Latin: [[dediticius]] ''m''
@@ -25,8 +27,10 @@
 *Slovak: [[zajatec]] ''m'' (''plural'' zajatci)
 *Spanish: [[prisionero de guerra]] ''m''
 *Swedish: [[krigsfånge]] 
+*Telugu: [[యుద్ధ ఖైదీ]] (yuddha khaidee)
 *Ukrainian: [[бранець]] (br'''a'''nec') {{m}}
 *[[Volapük]]: [[kligafanäböpäb]]
+{{bottom}}
 
 ===Adjective===
 '''prisoner-of-war''' (''before the noun''), '''prisoner of war''' (''after the noun'')
