----, rfc novial : shouldn't the stuff in Derivation be in a standard Etymology section? <abandono#1034324>

--- a/en/a/abandono.4114.wikitext
+++ b/en/a/abandono.4114.wikitext
@@ -1,17 +1,22 @@
 ==[[Interlingua]]==
+
 ===Noun===
 '''abandono'''
+
 # Interlingua for ''' '' [[abandonment]] '' ''', action of abandoning. 
 # state of being abandoned
 # the '''abandon''' 
 #:Hence: abandonar - abandonamento
 
 ----
-
+{{rfc}}
 ==[[Novial]]==
+
 ===Noun===
 '''abandono'''
-#[[abandoning]], [[abandonment]]
+
+# [[abandoning]], [[abandonment]]
+
 ====Derivation====
 From [[abandona]], to [[abandon}}.
 
@@ -24,12 +29,14 @@ Morphemes: [[abandon-]] + [[-o]](2).
 |[[abandona]] || { v } || [[abandon]]
 |}
 
+----
+
 ==Spanish==
 
 ===Noun===
 '''abandono''' {{m}}
 
-#[[abandonment]]
+# [[abandonment]]
 
 [[Category:Spanish nouns]]
 
