--- a/en/q/quadruped.4320.wikitext
+++ b/en/q/quadruped.4320.wikitext
@@ -1,8 +1,9 @@
-== [[noun]] ==
+==English==
+===Noun===
 # a four footed animal.
 # a mammal ambulating on all fours.
 
-=== Translations ===
+==== Translations ====
 *[[Dutch]]: [[viervoeter]] ''m''
 *[[French]]: [[quadrupède]] ''m''
 *[[Spanish]]: [[cuadrupedo]] ''m''
