fix headers <quadrupedal#1034448>

--- a/en/q/quadrupedal.4321.wikitext
+++ b/en/q/quadrupedal.4321.wikitext
@@ -1,6 +1,9 @@
-== [[adjective]] ==
+==English==
+===Adjective===
 # walking on four feet.
-#:'''Translations'''
-#:*[[Dutch]]: [[viervoetig]]
+
+====Translations====
+*[[Dutch]]: [[viervoetig]]
+
 === See also ===
 *[[quadruped]]
