--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -43,12 +43,14 @@ From Middle English, from Old English ''[[þing]]''.
 {{top}}
 *Albanian: [[send#Albanian|send]]
 *Arabic: {{ARchar|[[شيء]]}} (šæy’) {{m}}
-*[[Basque]]: [[gauza]]
+*Basque: [[gauza]]
 *Bosnian: [[stvar]] {{f}}
+*Catalan: [[cosa]] ''f''
 *CJKV Characters: [[物]], [[事]]
 *Chinese:
 :Cantonese: [[東西]] (dung1 sai1), [[物]] (mat6), [[事物]] (si6 mat6)
 :Mandarin: [[東西]] (dōngxī), [[物]] (wù), [[事物]] (shìwù)
+*Croatian: [[stvar]] ''f''
 *Danish: [[ting]] {{c}}
 *Dutch: [[ding]] {{n}}
 *Estonian: [[asi]], [[ese]]
