--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -13,16 +13,22 @@
 ====Translations====
 '''material produced by tanning animal skin'''
 {{top}}
+*Albanian: [[lëkurë]]
 *Bosnian: [[koža#Bosnian|koža]] {{f}}
 *Catalan: [[cuir]] {{m}}
 *Chinese: [[皮革]] (pí gé)
+*Croatian: [[koža]] ''f''
 *Danish: [[læder]] ''n''
 *Dutch: [[leer]] ''n'', [[leder]] (formal) ''n''
+*Esperanto: [[ledo]]
 *Finnish: [[nahka]] (1, 4), [[säämiskä]] (2)
 *French: [[cuir]] ''m''
 *German: [[Leder]] ''n''
+*Guaraní: [[pire]]
 {{mid}}
+*Hungarian: [[bőr]]
 *Italian: [[cuoio]] ''m''
+*Lithuanian: [[oda]] ''f''
 *Serbian:
 *:Latin: [[koža#Serbian|koža]] {{f}}
 *:Cyrillic: [[кожа#Serbian|кожа]] {{f}}
