--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -45,7 +45,7 @@
 *Slovene: [[spet]], [[ponovno]], [[znova]]
 *Spanish: [[otra vez]], [[de nuevo]]
 *Swedish: [[igen]], [[åter]], [[på nytt]]
-*Telugu: [[మళ్లీ]] (mallee), మరలా (maralaa)
+*Telugu: [[మళ్లీ]] (mallee), [[మరలా]] (maralaa)
 *Turkish: [[yeniden]], [[tekrar]], [[gene]]
 {{bottom}}
 
