/* Related terms */ <again#1036046>

--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -12,7 +12,7 @@
 # Having already happened before.
 #: ''I didn't do a very good job the first time, and now I have to do it again.''
 
-====Related Terms====
+====Related terms====
 *[[again and again]]
 *[[once again]]
 
