--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -25,6 +25,7 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 
 '''act or process of dividing anything'''
 {{top}}
+*Afrikaans: [[verdeling]]
 *Dutch: [[deling]] ''f''; [[verdeling]] ''f''; [[scheiding]] ''f''
 *Esperanto: [[divido]]
 *Finnish: [[jakaminen]], [[jako]]
@@ -41,6 +42,7 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 
 '''each of the parts resulting from division'''
 {{top}}
+*Afrikaans: [[gedeelte]]
 *Dutch: [[deel]] ''n'', [[gedeelte]] ''n''
 *Finnish: [[osa]]
 {{mid}}
@@ -48,6 +50,7 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 
 '''arithmetic: process of dividing a number by another'''
 {{top}}
+*Afrikaans: [[deel]]
 *Dutch: [[deling]] ''f'';  [[delen]] ''n''
 *Esperanto: [[divido]]
 *Finnish: [[jako]], [[jakaminen]]
@@ -64,6 +67,7 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 
 '''arithmetic: calculation involving this process'''
 {{top}}
+Afrikaans: [[deel]]
 *Dutch: [[deling]] ''f''; [[staartdeling]] ''f''
 *Finnish: [[jakolasku]]
 {{mid}}
@@ -72,6 +76,7 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 
 '''large military unit'''
 {{top}}
+*Afrikaans: [[afdeling]]; [[skeiding]]
 *Dutch: [[divisie]] ''f'',
 *Esperanto: [[divizio]]
 *Finnish: [[divisioona]]
@@ -86,6 +91,7 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 
 '''section of a large company'''
 {{top}}
+*Afrikaans: [[afdeling]] 
 *Dutch: [[afdeling]] ''f'', [[divisie]] ''f'', [[eenheid]] ''f''
 {{mid}}
 *Russian: [[отдел]] ''m''
@@ -113,6 +119,9 @@ Finnish: [[kaari]], [[pääjakso]]
 {{mid}}
 *Swedish: [[division#Swedish|division]] {{c}}, [[liga#Swedish|liga]] {{c}}
 {{bottom}}
+
+'''Law: concept of serperate responsibility'''
+[[deelbaarheid]] (van prestasie)
 
 =====Translations to be checked=====
 <!--Remove this section once all of the translations below have been moved into the tables above.-->
