robot  Adding: hu, ko <leather#1050538>

--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -69,8 +69,10 @@
 [[Category:1000 English basic words]]
 
 [[fr:leather]]
+[[ko:leather]]
 [[io:leather]]
 [[it:leather]]
+[[hu:leather]]
 [[ru:leather]]
 [[fi:leather]]
 [[zh:leather]]
