--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -18,6 +18,7 @@
 ====Translations====
 '''mammal'''
 {{top}}
+*Afrikaans: [[vark]]
 *Albanian: [[derr]]
 *[[Amuzgo]]: [[kítzku]]
 *Arabic: {{ARchar|[[خنزير]]}} (χanzí:r) {{m}}
@@ -93,6 +94,7 @@
 
 '''greedy person'''
 {{top}}
+*Afrikaans: [[vark]]
 *Finnish: [[ahmatti]]
 *French: [[cochon]] {{m}}, [[porc#French|porc]] {{m}}
 {{mid}}
@@ -101,6 +103,7 @@
 
 '''nasty person'''
 {{top}}
+*Afrikaans: [vark]]
 *Bosnian: [[svinja]] {{f}}
 *Finnish: [[ilkimys]]
 *French: [[salaud]] {{m}}, [[cochon]] {{m}}, [[porc#French|porc]] {{m}}
@@ -112,6 +115,7 @@
 
 '''dirty person'''
 {{top}}
+*Afrikaans: [[vark]]
 *Bosnian: [[svinja]] {{f}}
 *Finnish: [[sika#Finnish|sika]], [[possu]]
 *French: [[cochon]] {{m}}, [[porc#French|porc]] {{m}}
