--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -12,20 +12,20 @@
 
 ====Translations====
 {{top}}
-*Albanian: [[ketri]]
-*[[Basque]]: [[katagorri]]
+*Albanian: [[ketër]] ''m''
+*Basque: [[katagorri]]
 *Belarussian: [[звачайная ваверка]]
 *Bosnian: [[vjeverica]] ''f''
-*[[Breton]]: [[gwiñver]] ''m'' -ed ''pl'', [[kazh-koad]] ''m'' kizhier-koad ''pl''
+*Breton: [[gwiñver]] ''m'' -ed ''pl'', [[kaz-koad]] ''m'' kizier-koad ''pl''
 *Bulgarian: [[катерица]] (katerica)
-*[[Catalan]]: [[esquirol]] ''m''
+*Catalan: [[esquirol]] ''m''
 *[[Cherokee]]: [[ᏌᎳᎵ]] (salali)
 *Chinese: [[松鼠]] sōngshǔ
 *Croatian: [[vjeverica]] ''f''
 *Czech: [[veverka]] ''f''
 *Danish: [[egern]]
 *Dutch: [[eekhoorn]] ''m'', [[eekhoorntje]] ''n''
-*[[Esperanto]]: [[sciuro]]
+*Esperanto: [[sciuro]]
 *Estonian]]: [[orav]]
 *[[Faroese]]: [[íkorni]]
 *Finnish: [[orava]]
@@ -45,7 +45,7 @@
 *Japanese: [[栗鼠]] ([[りす]], risu)
 *Korean: [[다람쥐]] daramjwi
 *[[Ladino]]: [[schirata]]
-*Latin: [[Sciurus vulgaris]] '' ''
+*Latin: [[sciurus]] ''m''
 *Latvian: [[vāvere]]
 *Lithuanian: [[voverė]] ''f''
 *[[Lower Sorbian]]: [[njewjericka]]
