robot  Adding: hu <adjustment#1054359>

--- a/en/a/adjustment.4313.wikitext
+++ b/en/a/adjustment.4313.wikitext
@@ -55,6 +55,7 @@
 [[de:adjustment]]
 [[fr:adjustment]]
 [[it:adjustment]]
+[[hu:adjustment]]
 [[pt:adjustment]]
 [[fi:adjustment]]
 [[uk:adjustment]]
