--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -42,6 +42,7 @@ Middle English ''whistlen''; Anglo-Saxon ''hwistlan''.
 *[[Breton]]: [[c'hwitell]] {{f}}, c'hwitelloù {{p}} (1); [[c'hwitelladenn]] {{f}}, c'hwitelladennoù {{p}} (2,3)
 *[[Catalan]]: [[xiulet]] {{m}}
 *Chinese: [[口哨]] (kǒushào)
+*Croatian: [[zviždaljka]] {{f}} (1), [[zvižduk]] {{m}} (2,3)
 *Danish: [[fløjte]] {{c}} (1), [[fløjt]] {{n}} (2,3)
 *Dutch: [[fluitje]] {{n}} (1), [[fluittoon]] {{m}} (2,3)
 *Finnish: [[pilli]] (1), [[vihellys]] (2) (3), [[vislaus]] (2)
