see also; + is: <island#1061268>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -1,3 +1,4 @@
+{{See|Island|Ísland}}
 ==English==
 
 {{rank|directly|James|Greek|933|island|special|memory|proved}}
@@ -41,6 +42,7 @@ Old English [[iegland|īeġland]].  The S was added by confusion with French ''[
 *Greek: [[νήσος]] [ˈniso̞s] {{f}}, [[νησί]] [niˈsi] {{n}}
 *Hebrew: [[אי]] (i) {{m}}
 *Hungarian: [[sziget]]
+*Icelandic: [[Ísland]]
 *Ido: [[insulo]]
 *Ilocano: [[puro]]
 *Indonesian: [[pulau]], [[nusa]]
