--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -77,6 +77,7 @@
 {{bottom}}
 ;in mathematics
 {{top}}
+*French: [[pondérer]]
 {{mid}}
 *Swedish: [[vikta]]
 {{bottom}}
@@ -88,11 +89,6 @@
 {{top}}
 {{mid}}
 {{bottom}}
-
-====Translations to be checked====
-{{checktrans}}
-
-*{{ttbc|French}}: [[pondérer]]
 
 [[Category:Mechanics]]
 
