--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -5,3 +5,4 @@
 # a [[Japanese]] [[manufacturer]] of [[games console]]s etc, founded in 1889.
 # (''historically'') [[Nintendo Entertainment System]].
 [[hu:Nintendo]]
+# The creator of [[hanafuda]] cards in the [[1800s]].
