--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -26,6 +26,7 @@
 *Japanese: [[出血]]する ([[しゅっけつ]]する, shukketsu-suru), [[血]]を[[流す]] ([[ち]]を[[ながす]], chi-wo-nagasu)
 *Polish: [[krwawić]]
 *Romanian: [[sângera]]
+*Russian: [[кровоточить]] (krovotočít')
 *Spanish: [[sangrar]]
 *Turkish: [[kanamak]] [-ar]
 {{bottom}}
