--- a/en/ι/Ισραήλ.4257.wikitext
+++ b/en/ι/Ισραήλ.4257.wikitext
@@ -1,18 +1,11 @@
 ==Greek==
 
+===Pronunciation===
 [[ancient]] [isra'ε:l], [[modern]] [iza'il]
 
-===[[masculine]]===
+===Proper noun===
+'''ισραήλ'''
 
-#The [[patriarch]] [[Israel]].
-#The [[Hebrew]] [[people]], the [[child|children]] of [[Israel]].
-#The [[state]] of [[Israel]], both [[ancient]] and [[modern]].
-
-=== [[other]] [[language]]s===
-
-*[[English]]: ''[[Israel]]'' (1-3)
-*[[Esperanto]]: ''[[Izraelo]]'' (1), ''[[Izraelido]]j'' ''[[plural|pl.]]'' (2), ''[[Israelo]]'' (3)
-*[[French]]: ''[[Israël]]'' (1-3)
-*[[German]]: ''[[Israel]]'' (1-3)
-*[[Italian]]: ''[[Israele]]'' (1-3)
-*[[Russian]]: ''[[Израэль]]'' (1-3)
+# The [[patriarch]] [[Israel]].
+# The [[Hebrew]] [[people]], the [[child|children]] of [[Israel]].
+# The [[state]] of [[Israel]], both [[ancient]] and [[modern]].
