--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -67,7 +67,8 @@ Middle English [[þoȝ]], borrowed from a Scandinavian source such as Old Norse 
 *Italian: [[comunque]], [[nonostante]]
 *Portuguese:  no [[entanto]]
 *[[Volapük]]: [[do#Volapük|do]]
-
+*Swahili: [[Ijapokuwa]]
+*Swahili: [[Hata hivyo]]
 [[fr:though]]
 [[io:though]]
 [[it:though]]
